<?xml version="1.0"?>
<package format="2">

  <name>gclib_ros</name>
  <version>0.0.1</version>
  <description>ROS wrapper for the Galil Controller library</description>

  <maintainer email="klaxalk@gmail.com">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>

</package>
